Bug 1801690 - Fix searching for 2 wide chars in a latin1 string r=iain, a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D162749